--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -108,7 +108,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tvWeight" />
 
                     <TextView
-                        android:id="@+id/tvChangeWeight"
+                        android:id="@+id/tvHeight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="44dp"
@@ -124,14 +124,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="40dp"
                         android:layout_marginTop="4dp"
-                        android:text="Since 10/10/2017"
+                        android:text="@string/current_height"
                         android:textColor="#424242"
                         android:textSize="12sp"
                         android:textStyle="normal"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvChangeWeight"
+                        app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                         tools:ignore="HardcodedText" />
 
                 </android.support.constraint.ConstraintLayout>
@@ -210,7 +209,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tvBMI" />
 
                     <TextView
-                        android:id="@+id/tvChangeBMI"
+                        android:id="@+id/tvStandardBMI"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="44dp"
@@ -226,14 +225,13 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="40dp"
                         android:layout_marginTop="4dp"
-                        android:text="Since 11/11/2017"
+                        android:text="@string/standard_bmi"
                         android:textColor="#424242"
                         android:textSize="12sp"
                         android:textStyle="normal"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tvChangeBMI"
+                        app:layout_constraintTop_toBottomOf="@+id/tvStandardBMI"
                         tools:ignore="HardcodedText" />
                 </android.support.constraint.ConstraintLayout>
 
