--- a/app/src/main/res/layout/goal_row.xml
+++ b/app/src/main/res/layout/goal_row.xml
@@ -22,11 +22,11 @@
         android:id="@+id/chartToday"
         android:layout_width="64dp"
         android:layout_height="64dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="24dp"
-        />
+        app:layout_constraintStart_toEndOf="@+id/tvTargetAmount"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
