--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -51,17 +51,17 @@
                     android:layout_marginTop="16dp"/>
 
                 <TextView
+                    android:id="@+id/tvMins"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvMins"
+                    android:layout_marginBottom="32dp"
                     android:text="@string/mins"
-                    android:textSize="32sp"
                     android:textColor="#424242"
+                    android:textSize="32sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginBottom="16dp"/>
+                    app:layout_constraintRight_toRightOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -96,17 +96,17 @@
                     android:layout_marginTop="16dp"/>
 
                 <TextView
+                    android:id="@+id/tvKM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tvKM"
-                    android:text="@string/km"
-                    android:textSize="36sp"
+                    android:layout_marginBottom="32dp"
+                    android:text="M"
                     android:textColor="#424242"
+                    android:textSize="36sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginBottom="16dp"/>
+                    app:layout_constraintRight_toRightOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
