--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="sg.edu.rp.c346.dontstop.RecordingActivity"
+    tools:context="sg.edu.rp.c346.dontstop.Activity.RecordingActivity"
     android:weightSum="10"
     android:orientation="vertical"
     android:gravity="center_horizontal">
