--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    tools:context="sg.edu.rp.c346.dontstop.SignInActivity">
+    tools:context="sg.edu.rp.c346.dontstop.Activity.SignInActivity">
 
     <TextView
         android:id="@+id/textViewEmail"
