--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="sg.edu.rp.c346.dontstop.HomeActivity"
+    tools:context="sg.edu.rp.c346.dontstop.Activity.HomeActivity"
   >
 
 </android.support.constraint.ConstraintLayout>
