--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="sg.edu.rp.c346.dontstop.MapFragment"
+    tools:context="sg.edu.rp.c346.dontstop.Fragment.MapFragment"
     >
 
     <com.google.android.gms.maps.MapView
